Rename lazy_image helper to spree_lazy_image

--- a/app/views/spree/taxons/_header.html.erb
+++ b/app/views/spree/taxons/_header.html.erb
@@ -12,7 +12,7 @@
   <% end %>
   <% if @taxon.icon&.attachment %>
     <div class="d-none d-md-block pt-4 taxon-icon">
-      <%= lazy_image(
+      <%= spree_lazy_image(
         src: main_app.url_for(@taxon.icon.attachment),
         alt: @taxon.description || Spree.t('taxon_missing_alt'),
         width: 1110,
