--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -18,7 +18,7 @@
     <% elsif not @taxon %>
       <div id="no-taxon-banner">
         <div class="container">
-          <%= lazy_image(
+          <%= spree_lazy_image(
             src: asset_path('homepage/products.jpg'),
             alt: 'products-banner',
             width: 1110,
