--- a/app/views/spree/shared/carousel/_single.html.erb
+++ b/app/views/spree/shared/carousel/_single.html.erb
@@ -53,7 +53,7 @@
             width: zoomed ? 650 : 475,
             height: zoomed ? 870 : 594
           } %>
-          <%= imageIndex.zero? ? image_tag(image_attrs.delete(:src), image_attrs) : lazy_image(**image_attrs) %>
+          <%= imageIndex.zero? ? image_tag(image_attrs.delete(:src), image_attrs) : spree_lazy_image(**image_attrs) %>
         </div>
       </div>
     <% end %>
@@ -65,7 +65,7 @@
         data-target="#<%= id %>"
         data-slide-to="<%= imageIndex %>"
         class="product-carousel-indicators-indicator product-carousel-indicators-indicator--visible<%= ' active' if imageIndex == 0 %>">
-        <%= lazy_image(
+        <%= spree_lazy_image(
           src: main_app.url_for(image.url(:pdp_thumbnail)),
           class: 'd-block w-100',
           alt: image.alt || @product.name,
