--- a/app/views/spree/shared/carousel/_thumbnails.html.erb
+++ b/app/views/spree/shared/carousel/_thumbnails.html.erb
@@ -19,7 +19,7 @@
                 data-product-carousel-to-slide="<%= image_index %>"
                 data-variant-is-master="<%= image.viewable_id == @product.master.id %>"
                 data-variant-id="<%= image.viewable_id %>">
-                <%= lazy_image(
+                <%= spree_lazy_image(
                   src: main_app.url_for(image.url(:pdp_thumbnail)),
                   class: 'd-block w-100',
                   alt: image.alt || @product.name,
