Sync upstream to 4-5-0 branch

--- a/app/views/spree/shared/cms/sections/_image_gallery.html.erb
+++ b/app/views/spree/shared/cms/sections/_image_gallery.html.erb
@@ -64,24 +64,24 @@
     <div class="col-12">
 
       <%= link_to link_one, class: link_one_classes, style: '--aspect-ratio:18/13;' do %>
-        <% if section.image_one.attached? && section.image_one.variable? %>
+        <% if section.image_one&.attachment&.attached? && section.image_one&.attachment&.variable? %>
 
             <!-- XS to MD -->
             <img class="d-md-none lazyload"
-              data-src="<%= main_app.url_for(section.img_one_md) %>"
-              data-srcset="<%= main_app.url_for(section.img_one_md) %>"
+              data-src="<%= main_app.cdn_image_url(section.img_one_md) %>"
+              data-srcset="<%= main_app.cdn_image_url(section.img_one_md) %>"
               alt="<%= section&.title_one %>">
 
             <!-- MD to XL -->
             <img class="d-none d-md-block d-xl-none lazyload"
-              data-src="<%= main_app.url_for(section.img_one_lg) %>"
-              data-srcset="<%= main_app.url_for(section.img_one_lg) %>"
+              data-src="<%= main_app.cdn_image_url(section.img_one_lg) %>"
+              data-srcset="<%= main_app.cdn_image_url(section.img_one_lg) %>"
               alt="<%= section&.title_one %>">
 
             <!-- XL UP -->
             <img class="d-none d-xl-block lazyload"
-              data-src="<%= main_app.url_for(section.img_one_xl) %>"
-              data-srcset="<%= main_app.url_for(section.img_one_xl) %>"
+              data-src="<%= main_app.cdn_image_url(section.img_one_xl) %>"
+              data-srcset="<%= main_app.cdn_image_url(section.img_one_xl) %>"
               alt="<%= section&.title_one %>">
         <% else %>
           <%= icon( name: 'card-image',
@@ -102,24 +102,24 @@
     <div class="col-12">
 
       <%= link_to link_three, class: link_three_classes, style: '--aspect-ratio:18/13;' do %>
-        <% if section.image_three.attached? && section.image_three.variable? %>
+        <% if section.image_three&.attachment&.attached? && section.image_three&.attachment&.variable? %>
 
             <!-- XS to MD -->
             <img class="d-md-none lazyload"
-              data-src="<%= main_app.url_for(section.img_three_md) %>"
-              data-srcset="<%= main_app.url_for(section.img_three_md) %>"
+              data-src="<%= main_app.cdn_image_url(section.img_three_md) %>"
+              data-srcset="<%= main_app.cdn_image_url(section.img_three_md) %>"
               alt="<%= section&.title_three %>">
 
             <!-- MD to XL -->
             <img class="d-none d-md-block d-xl-none lazyload"
-              data-src="<%= main_app.url_for(section.img_three_lg) %>"
-              data-srcset="<%= main_app.url_for(section.img_three_lg) %>"
+              data-src="<%= main_app.cdn_image_url(section.img_three_lg) %>"
+              data-srcset="<%= main_app.cdn_image_url(section.img_three_lg) %>"
               alt="<%= section&.title_three %>">
 
             <!-- XL UP -->
             <img class="d-none d-xl-block lazyload"
-              data-src="<%= main_app.url_for(section.img_three_xl) %>"
-              data-srcset="<%= main_app.url_for(section.img_three_xl) %>"
+              data-src="<%= main_app.cdn_image_url(section.img_three_xl) %>"
+              data-srcset="<%= main_app.cdn_image_url(section.img_three_xl) %>"
               alt="<%= section&.title_three %>">
         <% else %>
           <%= icon( name: 'card-image',
@@ -139,24 +139,24 @@
 <!-- Right Block TALL -->
 <div class="col-6 <%= section_two_padding %>">
   <%= link_to link_two, class: link_two_classes, style: '--aspect-ratio:27/40;' do %>
-    <% if section.image_two.attached? && section.image_two.variable? %>
+    <% if section.image_two&.attachment&.attached? && section.image_two&.attachment&.variable? %>
 
         <!-- XS to MD -->
         <img class="d-md-none lazyload"
-          data-src="<%= main_app.url_for(section.img_two_md) %>"
-          data-srcset="<%= main_app.url_for(section.img_two_md) %>"
+          data-src="<%= main_app.cdn_image_url(section.img_two_md) %>"
+          data-srcset="<%= main_app.cdn_image_url(section.img_two_md) %>"
           alt="<%= section&.title_two %>">
 
         <!-- MD to XL -->
         <img class="d-none d-md-block d-xl-none lazyload"
-          data-src="<%= main_app.url_for(section.img_two_lg) %>"
-          data-srcset="<%= main_app.url_for(section.img_two_lg) %>"
+          data-src="<%= main_app.cdn_image_url(section.img_two_lg) %>"
+          data-srcset="<%= main_app.cdn_image_url(section.img_two_lg) %>"
           alt="<%= section&.title_two %>">
 
         <!-- XL UP -->
         <img class="d-none d-xl-block lazyload"
-          data-src="<%= main_app.url_for(section.img_two_xl) %>"
-          data-srcset="<%= main_app.url_for(section.img_two_xl) %>"
+          data-src="<%= main_app.cdn_image_url(section.img_two_xl) %>"
+          data-srcset="<%= main_app.cdn_image_url(section.img_two_xl) %>"
           alt="<%= section&.title_two %>">
     <% else %>
       <%= icon( name: 'file-image',
