--- a/app/views/spree/shared/cms/sections/_side_by_side_images.html.erb
+++ b/app/views/spree/shared/cms/sections/_side_by_side_images.html.erb
@@ -36,23 +36,23 @@
               class: "d-flex align-items-end justify-content-center bg-light text-center overflow-hidden homepage-bottom-box #{'pointer-events-none cursor-default' unless link_one}",
               style: '--aspect-ratio:54/35;' do %>
 
-      <% if section.image_one.attached? %>
+      <% if section.image_one&.attachment&.attached? %>
         <!-- XS to MD -->
         <img class="d-md-none lazyload"
-          data-src="<%= main_app.url_for(section.img_one_md) %>"
-          data-srcset="<%= main_app.url_for(section.img_one_md) %>"
+          data-src="<%= main_app.cdn_image_url(section.img_one_md) %>"
+          data-srcset="<%= main_app.cdn_image_url(section.img_one_md) %>"
           alt="<%= section&.title_one %>">
 
         <!-- MD to XL -->
         <img class="d-none d-md-block d-xl-none lazyload"
-          data-src="<%= main_app.url_for(section.img_one_lg) %>"
-          data-srcset="<%= main_app.url_for(section.img_one_lg) %>"
+          data-src="<%= main_app.cdn_image_url(section.img_one_lg) %>"
+          data-srcset="<%= main_app.cdn_image_url(section.img_one_lg) %>"
           alt="<%= section&.title_one %>">
 
         <!-- XL UP -->
         <img class="d-none d-xl-block lazyload"
-          data-src="<%= main_app.url_for(section.img_one_xl) %>"
-          data-srcset="<%= main_app.url_for(section.img_one_xl) %>"
+          data-src="<%= main_app.cdn_image_url(section.img_one_xl) %>"
+          data-srcset="<%= main_app.cdn_image_url(section.img_one_xl) %>"
           alt="<%= section&.title_one %>">
        <% else %>
         <%= icon( name: 'card-image',
@@ -79,23 +79,23 @@
               class: "d-flex align-items-end justify-content-center bg-light text-center overflow-hidden homepage-bottom-box #{'pointer-events-none cursor-default' unless link_two}",
               style: '--aspect-ratio:54/35;' do %>
 
-      <% if section.image_two.attached? %>
+      <% if section.image_two&.attachment&.attached? %>
         <!-- XS to MD -->
           <img class="d-md-none lazyload"
-            data-src="<%= main_app.url_for(section.img_two_md) %>"
-            data-srcset="<%= main_app.url_for(section.img_two_md) %>"
+            data-src="<%= main_app.cdn_image_url(section.img_two_md) %>"
+            data-srcset="<%= main_app.cdn_image_url(section.img_two_md) %>"
             alt="<%= section&.title_two %>">
 
         <!-- MD to XL -->
           <img class="d-none d-md-block d-xl-none lazyload"
-            data-src="<%= main_app.url_for(section.img_two_lg) %>"
-            data-srcset="<%= main_app.url_for(section.img_two_lg) %>"
+            data-src="<%= main_app.cdn_image_url(section.img_two_lg) %>"
+            data-srcset="<%= main_app.cdn_image_url(section.img_two_lg) %>"
             alt="<%= section&.title_two %>">
 
         <!-- XL UP -->
           <img class="d-none d-xl-block lazyload"
-            data-src="<%= main_app.url_for(section.img_two_xl) %>"
-            data-srcset="<%= main_app.url_for(section.img_two_xl) %>"
+            data-src="<%= main_app.cdn_image_url(section.img_two_xl) %>"
+            data-srcset="<%= main_app.cdn_image_url(section.img_two_xl) %>"
             alt="<%= section&.title_two %>">
        <% else %>
         <%= icon( name: 'card-image',
